module03-ec2rds/wikiapp-terraform/modules/ec2/main.tf
resource "aws_security_group" "ec2_sg" {
  name        = "wikiapp-ec2-sg"
  description = "Allow SSH from my IP and HTTP from anywhere"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "wikiapp" {
  ami                    = "ami-053b0d53c279acc90"  # ✅ Ubuntu 22.04
  instance_type          = var.instance_type
  subnet_id              = var.public_subnet
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
  key_name               = var.key_name

resource "local_file" "private_key" {
  content  = tls_private_key.ssh_key.private_key_pem
  filename = "${path.module}/wikiapp-key.pem"
  file_permission = "0400"
}

user_data = templatefile("${path.module}/user_data.sh", {
  rds_endpoint = var.rds_endpoint
  db_username  = var.db_username
  db_password  = var.db_password
  db_name      = var.db_name
})

  tags = {
    Name = "wikiapp-ec2"
  }
}

output "public_ip" {
  value = aws_instance.wikiapp.public_ip
}

output "security_group_id" {
  value = aws_security_group.ec2_sg.id
}
